Fixes for compilation errors.